fix: adjust spacing of success icon to match adjustments for font-awesome 6

--- a/css/registration.css
+++ b/css/registration.css
@@ -165,6 +165,11 @@ section.page-title h1 {
     font-size: 29px;
 }
 
+.icon-success-spacing {
+  margin-bottom: 0.15rem;
+  margin-top: 0.8rem;
+}
+
 a.active .tab {
     background: #6EAC42;
     box-shadow: 0 16px 26px -10px #28a745c9, 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px #28a7453d;
